--- a/Sentiment Analysis with PySpark.ipynb
+++ b/Sentiment Analysis with PySpark.ipynb
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
      "text": [
       "Accuracy Score: 0.8126\n",
       "ROC-AUC: 0.8856\n",
-      "CPU times: user 181 ms, sys: 60.3 ms, total: 241 ms\n",
+      "CPU times: user 201 ms, sys: 69.1 ms, total: 270 ms\n",
       "Wall time: 6min 28s\n"
      ]
     }
@@ -616,6 +616,53 @@
    "source": [
     "This has given me almost same result, marginally lower, but the difference is in the fourth digit. Considering it takes only 8 mins without ChiSqSelector, I choose the model without ChiSqSelector."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And finally, let's try this model on the final test set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy Score: 0.8122\n",
+      "ROC-AUC: 0.8862\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_predictions = trigramwocs_pipelineFit.transform(test_set)\n",
+    "test_accuracy = test_predictions.filter(test_predictions.label == test_predictions.prediction).count() / float(test_set.count())\n",
+    "test_roc_auc = evaluator.evaluate(test_predictions)\n",
+    "\n",
+    "# print accuracy, roc_auc\n",
+    "print \"Accuracy Score: {0:.4f}\".format(test_accuracy)\n",
+    "print \"ROC-AUC: {0:.4f}\".format(test_roc_auc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Final test accuracy is 81.22%."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
